--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sumanth Reddy</title>
+    <title>P SUMANTH</title>
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -169,6 +169,10 @@
                 <div class="line"></div>
                     <a href="https://www.linkedin.com/in/psumanth/"><i class="ri-linkedin-fill"></i></a>
                     <a href="https://github.com/sumanth-ds"><i class="ri-github-fill"></i></a>
+                    <a href="mailto:sumanth3633@gmail.com?subject=Meeting%20Request&body=Hi%20[Your%20Name],%0D%0A%0D%0AI%20want%20to%20schedule%20a%20meeting%20with%20you%20next%20week.%0D%0A%0D%0ABest%20regards,%0D%0A[Your%20Name]"><i class="ri-mail-fill"></i></a>
+                    <a href="https://wa.me/+917569436484?text=Hi%20I%20See%20Your%20Profile.%2C%0ANow%20We%20Can%20Discuss"><i class="ri-whatsapp-fill"></i></a>
+
+
             </div>
                
         </div>
@@ -224,7 +228,7 @@
     <div class="reveals">Statistics<div id = skillsubtitle>(Discriptive Statistics & Inferencial Statistics) </div></div>
     <div class="reveals">Machine Learning<div id = skillsubtitle>(Supervied Learning & Unsupervied Learning) </div></div>
     <div class="reveals">Time Serie</div>
-    <div class="reveals">Natural Language Processing (NLP) </div>
+    <div class="reveals">Natural Language Processing<div id = skillsubtitle>(NLP)</div> </div>
     <div class="reveals">Deep Learning</div>
     <div class="reveals">Model Deployment</div>
 </div>
@@ -338,7 +342,7 @@
 
     <div id="end_to_end">
         
-        <img id="claim_image" src="claim_image.webp" >
+        <img id="claim_image1" src="claim_image.webp" >
         <p>
         Develop a predictive model that assesses the claim probability for car insurance policies. 
         The objective would be to understand the factors that influence claim frequency and severity in the period of six months and enable insurance companies to better assess risk and determine appropriate premiums for policyholders.
@@ -635,7 +639,48 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- -----------------contact details ------------------>
+
+
+<!-- <h1 id="contact" class="hh11">Contact Details</h1>
+<div id="contacts">
+    <a href="https://www.linkedin.com/in/psumanth/"><i class="ri-linkedin-fill"></i></a>
+    <a href="https://github.com/sumanth-ds"><i class="ri-github-fill"></i></a>
+    <a href="mailto:sumanth3633@gmail.com?subject=Meeting%20Request&body=Hi%20[Your%20Name],%0D%0A%0D%0AI%20want%20to%20schedule%20a%20meeting%20with%20you%20next%20week.%0D%0A%0D%0ABest%20regards,%0D%0A[Your%20Name]"><i class="ri-mail-fill"></i></a>
+    <a href="https://wa.me/+917569436484?text=Hi%20I%20See%20Your%20Profile.%2C%0ANow%20We%20Can%20Discuss"><i class="ri-whatsapp-fill"></i></a>
+
+
+</div>
+ -->
+
+
+
+
+
+
+
+
+
+
+
 
 
 
