--- a/index.html
+++ b/index.html
@@ -274,28 +274,38 @@
     <div class="project-details">
 
         <video playsinline autoplay muted loop width="100%" src="Normal_chatbot.webm"></video>
-
         <div class="container">
             <h1>Chatbot Project Highlights</h1>
             <ul>
-                <li><span>Developed:</span> A generative chatbot model by integrating Google’s and Meta’s models via API.</li>
-                <li><span>Built:</span> A conversational chatbot about Chat with CSV using Retrieval-Augmented Generation (RAG) techniques.</li>
-                <li><span>Implemented:</span> Seamless data retrieval from various sources to enhance user interaction with structured and unstructured data.</li>
-                <li><span>Leveraged:</span> RAG techniques for efficient and context-aware query resolution.</li>
-                <li><span>Utilized:</span> Skills in Python, APIs, Natural Language Processing (NLP), Machine Learning, and Data Retrieval to create an intuitive and responsive chatbot experience.</li>
+                <li><span>Developed:</span> An AI-powered conversational chatbot designed for personalized advisory by integrating llama models and custom APIs.</li>
+                <li><span>Built:</span> A chatbot capable of interacting with structured.</li>
+                <li><span>Implemented:</span> Efficient knowledge retrieval pipelines to answer user-specific queries with high accuracy and relevance.</li>
+                <li><span>Leveraged:</span> Advanced Natural Language Processing (NLP) and Machine Learning techniques for real-time query understanding and response generation.</li>
+                <li><span>Utilized:</span> Python, APIs, and data preprocessing tools to ensure seamless integration and robust performance.</li>
             </ul>
             <div class="skills">
                 <h2>Skills & Technologies</h2>
                 <ul>
-                    <li>Streamlit</li>
-                    <li>Gemini AI</li>
                     <li>Python</li>
+                    <li>Streamlit</li>
+                    <li>llama Model (Facebook)</li>
                     <li>Natural Language Processing (NLP)</li>
+                    <li>API Development</li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
 
 <div id="animatedElement" class="animate-up">
     <!-- Your content here -->
